[LOC-6170] Fetch plugin updates from WPE servers  (#31)
* feat: get plugin updates from WPE

Adapted from the sample code at https://github.com/wpengine/plugin-updater.

* ci: comment out wp-svn usage

This plugin can no longer be published on WP.org due to blocked access.

We'll just lint in Circle for now.

* chore: add npm run zip script

To make it easier to package a zip for production.

* chore: bump version to 1.1.2, add changelog

* chore: fix require path

* fix: deprecation warnings due to use of dynamic class properties

Properties need to be declared before use as of PHP 8.2. https://php.watch/versions/8.2/dynamic-properties-deprecated

* fix: prevent deprecation notices from more missing properties

Deprecated: Creation of dynamic property SEO_Data_Transporter_Admin::$analysis_result is deprecated in /Users/user.name/Local Sites/genesispluginupdater/app/public/wp-content/plugins/seo-data-transporter/includes/class-seo-data-transporter-admin.php on line 181

--- a/.svnignore
+++ b/.svnignore
@@ -1,5 +1,16 @@
+.editorconfig
 .git
 .gitignore
 .gitattributes
 .svnignore
+.DS_Store
+.nvmrc
+.circleci/
+package.json
+package-lock.json
+composer.json
+composer.lock
 node_modules
+vendor/
+scripts/
+*.zip
