--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "url": "https://github.com/copyblogger/seo-data-transporter"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "adm-zip": "^0.5.16",
+    "minimatch": "^10.0.1"
+  },
   "plugin": {
     "name": "SEO Data Transporter",
     "uri": "https://github.com/copyblogger/seo-data-transporter",
     "description": "SEO Data Transporter helps you transfer post/page specific SEO data, like custom doctitles, custom META descriptions and keywords, etc., from one platform (theme or plugin) to another.",
     "author": "StudioPress",
     "authoruri": "https://www.studiopress.com/",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "license": "GPL-2.0-or-later",
     "licenseuri": "https://www.gnu.org/licenses/gpl-2.0.html",
     "textdomain": "seo-data-transporter"
   },
   "scripts": {
-    "makepot": "composer makepot"
+    "makepot": "composer makepot",
+    "zip": "node scripts/create-zip.js"
   }
 }
